--- a/whats_fresh/whats_fresh_api/templates/generic.html
+++ b/whats_fresh/whats_fresh_api/templates/generic.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>What's Fresh | {{ title }}</title>
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&effect=3d-float' rel='stylesheet' type='text/css'>
