Write entry products list view

--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -14,6 +14,7 @@
                 {% endif %}
              </div>
              <div class="item_description">{{ item.description }}</div>
+             {% block extra_information %}{% endblock %}
          </div>
          </a>
          {% endfor %}
